WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237936
Web Inspector: REGRESSION(
r290720
): Debugger: Step next should not behave the same as Step into
https://bugs.webkit.org/show_bug.cgi?id=237936
Summary
Web Inspector: REGRESSION(r290720): Debugger: Step next should not behave the...
Devin Rousso
Reported
2022-03-15 19:05:54 PDT
# STEPS TO REPRODUCE 1. inspect any page 2. set a breakpoint outside a function 3. Step next ## EXPECTED the pause position should move to the next position in/above the current call frame ## ACTUAL the pause position moves inside the function
Attachments
[fast-cq] Patch
(1.93 KB, patch)
2022-03-15 19:06 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-03-15 19:06:22 PDT
Created
attachment 454786
[details]
[fast-cq] Patch
Joseph Pecoraro
Comment 2
2022-03-16 00:19:39 PDT
Comment on
attachment 454786
[details]
[fast-cq] Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=454786&action=review
> Source/JavaScriptCore/ChangeLog:8 > + Covered by existing tests (not sure why they don't fail on EWS, but they fail locally).
Interesting.
EWS
Comment 3
2022-03-16 17:40:17 PDT
Committed
r291380
(
248511@main
): <
https://commits.webkit.org/248511@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454786
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-03-16 17:41:18 PDT
<
rdar://problem/90401761
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug